# brainfuckvm

./: .gitignore  Cargo.toml  README.md  callgrind.out  profile.pb
.github/workflows/: rust.yml
brainfuck/: Cargo.toml
brainfuck/src/fields/: mod.rs
src/: main.rs
src/channel/: mod.rs
src/evaluation_argument/: mod.rs
src/fields/: mod.rs
src/fri/: mod.rs
src/merkle/: mod.rs
src/multivariate_polynomial/: mod.rs
src/ntt/: mod.rs
src/permutation_argument/: mod.rs
src/stark/: mod.rs
src/table/: mod.rs
src/tables/: instruction.rs  io.rs  memory.rs  mod.rs  processor.rs
src/univariate_polynomial/: mod.rs
src/vm/: mod.rs
