[package]
name = "brainfuckvm"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.1.4"
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.22"
rayon = "1.10.0"
rs_merkle = "1.4.2"
sha256 = "1.5.0"
rand="0.8"
pprof = { version = "0.14", features = ["protobuf-codec"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
